--- a/style.css
+++ b/style.css
@@ -13,5 +13,30 @@ header {
     padding: 24px 0; 
 }
 .imagem-cabecalho{
-    width: 12%;
+    width: 35%;
+}
+.cabecalho-lista-item{
+    background-color: black;
+    padding: 1em;
+    background-color:bisque;
+    display: block;
+    text-decoration: none;
+    margin-bottom: 1em;
+    grid-template-columns: 20%, 20%;
+}
+.site{
+ text-align: center;
+ background-color: rgb(224, 224, 224);
+}
+.todas-noticias{
+    text-align: justify;
+    background-color: rgb(199, 199, 199);
+}
+.texto{
+padding: 24px;
+width: 28px;
+}
+
+.noticia2{
+width: 38%;
 }
